versioned_docs/version-6.5.0/api/multiLineString.mdx
---
title: multiLineString
---

import * as turf from "turf-6";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Creates a [Feature](https://tools.ietf.org/html/rfc7946#section-3.2)\<[MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5)> based on a
coordinate array. Properties can be added optionally.

### Parameters

| Name                 | Type                               | Description                                                               |
| -------------------- | ---------------------------------- | ------------------------------------------------------------------------- |
| coordinates          | **Array\<Array\<Array\<number>>>** | an array of LineStrings                                                   |
| properties<i>?</i>   | **Object**                         | an Object of key-value pairs to add as properties _(default \{})_         |
| options<i>?</i>      | **Object**                         | Optional Parameters _(default \{})_                                       |
| options.bbox<i>?</i> | **Array\<number>**                 | Bounding Box Array [west, south, east, north] associated with the Feature |
| options.id<i>?</i>   | **string \| number**               | Identifier associated with the Feature                                    |

### Returns

<ul>
  **[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)\<[MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5)>** a MultiLineString feature

</ul>

### Examples

```javascript
var multiLine = turf.multiLineString([
  [
    [0, 0],
    [10, 10],
  ],
]);

//=multiLine
```

### Installation

```javascript
$ npm install @turf/helpers

import { multiLineString } from "@turf/helpers";
const result = multiLineString(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.multiLineString(...);
```
