versioned_docs/version-7.4.0/api/multiLineString.mdx
---
title: multiLineString
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

### Description

Creates a [Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;[MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5)&gt; based on a
coordinate array. Properties can be added optionally.

### Parameters

| Name                 | Type                                                                                            | Description                                                                |
| -------------------- | ----------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------- |
| coordinates          | **UNCERTAIN**                                                                                   |                                                                            |
| properties<i>?</i>   | **[GeoJsonProperties](https://tools.ietf.org/html/rfc7946#section-3.2)**                        | an Object of key-value pairs to add as properties _(default &#123;&#125;)_ |
| options<i>?</i>      | **[Object](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object)** | Optional Parameters _(default &#123;&#125;)_                               |
| options.bbox<i>?</i> | **[BBox](https://tools.ietf.org/html/rfc7946#section-5)**                                       | Bounding Box Array [west, south, east, north] associated with the Feature  |
| options.id<i>?</i>   | **Id**                                                                                          | Identifier associated with the Feature                                     |

### Returns

**[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;[MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5), [GeoJsonProperties](https://tools.ietf.org/html/rfc7946#section-3.2)&gt;** a MultiLineString feature

### Examples

```javascript
var multiLine = turf.multiLineString([
  [
    [0, 0],
    [10, 10],
  ],
]);

//=multiLine
```

### Installation

```javascript
$ npm install @turf/helpers

import { multiLineString } from "@turf/helpers";
const result = multiLineString(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.multiLineString(...);
```

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>
